Done proposal draft

--- a/proposal/Abstract/Abstract.tex
+++ b/proposal/Abstract/Abstract.tex
@@ -1,28 +1,4 @@
-% ***************************************************
-% Abstract
-% ***************************************************
-% TO PRODUCE A STAND-ALONE PDF OF YOUR ABSTRACT, uncomment this section and the \end{document} at the end of the file by removing the % from the start of each line.
-
-%\documentclass[12pt, a4paper]{memoir}
-
-%\input{LaTexPackages.tex}
-
-%\begin{document}
-
-%\begin{center}
-	%\textbf{\large Your title goes here}
-
-	%\textbf{Abstract}
-
-	%Your Name, The University of Queensland, 20??
-%\end{center}
-
-% ********* Enter your text below this line: ********
-Start this section on a new page [this template will automatically handle this]. \\
+\chapter[Abstract]{Abstract}
 
 \noindent
-The abstract should outline the main approach and findings of the thesis and normally must be between 300 and 800 words.
-
-% ***************************************************
-
-%\end{document}
+Compiler optimizations are critical for enhancing program execution speed and overall performance. This thesis proposes integrating Prolog-based optimization techniques into the GraalVM compiler framework to potentially enhance compiler performance. The approach involves developing a Prolog-based optimizer that translates GraalVM’s intermediate representation (IR) of programs into Prolog facts and defines optimization rules using Prolog’s declarative syntax. By querying these rules within the GraalVM compiler, the proposal aims to explore how Prolog’s logic programming capabilities can improve the expressiveness and effectiveness of compiler optimizations. The study seeks to assess the feasibility of this integration, examining how Prolog’s declarative nature might contribute to more sophisticated and potentially more efficient optimization strategies compared to traditional imperative methods. This approach could lead to advancements in compiler technology and open new avenues for research in the optimization phase of compilation. The project spans 30 weeks, divided into two semesters and four phases: Project Proposal, Proof of Concept, Extension and Evaluation, and Report and Demonstration, with 10 hours of work per week. The first semester focused on initial research and development of a proof of concept, and the second half on refining, expanding and preparing the final deliverables.
