--- a/proposal/Packages/LaTexPackages.tex
+++ b/proposal/Packages/LaTexPackages.tex
@@ -42,6 +42,9 @@
 \usepackage{blindtext}           %Produced 'blind' text for testing.
 \usepackage{tikz}                %To create graphic elements.
 \usepackage[figuresright]{rotating}	%Allows large tables to be rotated to landscape.
+\usepackage{titlesec}
+\usepackage{paralist}
+\usepackage{tabularx}
 \usetikzlibrary{shapes.geometric, arrows}
 %You can add more packages here if you need
 
