--- a/proposal/Packages/uqtitle.sty
+++ b/proposal/Packages/uqtitle.sty
@@ -46,25 +46,50 @@
 \noindent
 \vfill
 \begin{center}
-	\includegraphics[width=.65\textwidth]{UQLogo}
+	\includegraphics[width=.65\textwidth]{Packages/UQLogo}
 \end{center}
 
-\vspace{30 pt}
+\vspace{40 pt}
 
 \begin{center}
     \Huge
-	Project Proposal\\
-	\bfseries
-	\thetitle
+	{\bfseries \thetitle} \\
+	\Large
+	Project Proposal
 \end{center}
 
 \vspace{10 pt}
 
 \begin{center}
-	\Large
 	by \\
+	\Large
     \theauthor
 \end{center}
+
+\vspace{30 pt}
+
+\def\orcidlink{
+	\begin{center}
+		 \\
+		
+	\end{center}
+}
+
+\begin{center}
+	Supervisors \\
+	\Large
+    Brae J. Webb 
+	\includegraphics[width=.02\textwidth]{Packages/OrcidLogo} 
+	\orcid{0000-0003-3579-0244}, 
+	Mark Utting
+	\includegraphics[width=.02\textwidth]{Packages/OrcidLogo} 
+	\orcid{0000-0003-3134-6306}, 
+	Ian J. Hayes
+	\includegraphics[width=.02\textwidth]{Packages/OrcidLogo} 
+	\orcid{0000-0003-3649-392X}
+\end{center}
+
+\vspace{50 pt}
 
 \begin{center}
 	\Large
@@ -72,19 +97,14 @@
 	\@university{}.
 \end{center}
 
-%\begin{center}
-%    \includegraphics[width=.05\textwidth]{OrcidLogo.jpg} \\
-%    \@orcid{}
-%\end{center}
-
 \vspace{50 pt}
 
 \begin{center}
     \Large
-	Submitted for the degree of \\
-	\@currentdegrees{}.\\
 	\@date{}
 \end{center}
 
+\setlength{\parskip}{5pt}
+\setlength\parindent{0pt}
 
 }
