--- a/proposal/Abstract/Abstract.tex
+++ b/proposal/Abstract/Abstract.tex
@@ -1,4 +1,4 @@
 \chapter[Abstract]{Abstract}
 
 \noindent
-Compiler optimizations are critical for enhancing program execution speed and overall performance. This thesis proposes integrating Prolog-based optimization techniques into the GraalVM compiler framework to potentially enhance compiler performance. The approach involves developing a Prolog-based optimizer that translates GraalVM’s intermediate representation (IR) of programs into Prolog facts and defines optimization rules using Prolog’s declarative syntax. By querying these rules within the GraalVM compiler, the proposal aims to explore how Prolog’s logic programming capabilities can improve the expressiveness and effectiveness of compiler optimizations. The study seeks to assess the feasibility of this integration, examining how Prolog’s declarative nature might contribute to more sophisticated and potentially more efficient optimization strategies compared to traditional imperative methods. This approach could lead to advancements in compiler technology and open new avenues for research in the optimization phase of compilation. The project spans 30 weeks, divided into two semesters and four phases: Project Proposal, Proof of Concept, Extension and Evaluation, and Report and Demonstration, with 10 hours of work per week. The first semester focused on initial research and development of a proof of concept, and the second half on refining, expanding and preparing the final deliverables.
+Compiler optimizations are critical for enhancing program execution speed and overall performance. This thesis proposes integrating Prolog-based optimization techniques into the GraalVM compiler framework to potentially enhance compiler performance and optimization expressibility. The approach involves developing a Prolog-based optimizer that translates GraalVM’s intermediate representation (IR) of programs into Prolog facts and defines optimization rules using Prolog’s declarative syntax. By querying these rules within the GraalVM compiler, the proposal aims to explore how Prolog’s logic programming capabilities can improve the expressiveness and effectiveness of compiler optimizations. The study seeks to assess the feasibility of this integration, examining how Prolog’s declarative nature might contribute to more sophisticated and potentially more efficient optimization strategies compared to traditional imperative methods. This approach could lead to advancements in compiler technology and open new avenues for research in the optimization phase of compilation.
