--- a/proposal/References/Bibliography.bib
+++ b/proposal/References/Bibliography.bib
@@ -119,7 +119,7 @@
    month = {6},
    pages = {1-10},
    publisher = {ACM},
-   title = {AOT vs. JIT: impact of profile data on code quality},
+   title = {{AOT} vs. {JIT}: impact of profile data on code quality},
    volume = {52},
    url = {https://dl.acm.org/doi/10.1145/3078633.3081037},
    year = {2017},
@@ -151,7 +151,7 @@
    month = {5},
    pages = {1671-1676},
    publisher = {IEEE},
-   title = {Exploring Aspects of Polyglot High-Performance Virtual Machine GraalVM},
+   title = {Exploring Aspects of Polyglot High-Performance Virtual Machine {GraalVM}},
    url = {https://ieeexplore.ieee.org/document/8756917/},
    year = {2019},
 }
@@ -171,7 +171,7 @@
 
 @inproceedings{Duboscq2013,
    abstract = {We present an intermediate representation (IR) for a Java just in time (JIT) compiler written in Java. It is a graph-based IR that models both control-flow and data-flow dependencies between nodes. We show the framework in which we developed our IR. Much care has been taken to allow the programmer to focus on compiler optimization rather than IR bookkeeping. Edges between nodes are declared concisely using Java annotations, and common properties and functions on nodes are communicated to the framework by implementing interfaces. Building upon these declarations, the graph framework automatically implements a set of useful primitives that the programmer can use to implement optimizations .},
-   title={Graal IR : An Extensible Declarative Intermediate Representation},
+   title={Graal {IR}: An Extensible Declarative Intermediate Representation},
    author = {Gilles Duboscq and Lukas Stadler and Thomas Würthinger and Doug Simon and Christian Wimmer and Hanspeter Mössenböck},
    year={2013},
    url={https://api.semanticscholar.org/CorpusID:52231504},
@@ -218,7 +218,7 @@
    doi = {10.1145/3573105.3575673},
    isbn = {9798400700262},
    booktitle = {Proceedings of the 12th ACM SIGPLAN International Conference on Certified Programs and Proofs},
-   keywords = {GraalVM compiler,Isabelle/HOL,sea-of-nodes intermediate representation,verified code optimizer},
+   keywords = {GraalVM compiler,{Isabelle/HOL},sea-of-nodes intermediate representation,verified code optimizer},
    month = {1},
    pages = {320-333},
    publisher = {ACM},
@@ -265,10 +265,10 @@
    year = {2017},
 }
 
-@Inbook{Bramer2013,
+@incollection{Bramer2013,
    author="Bramer, Max",
    title="Clauses and Predicates",
-   bookTitle="Logic Programming with Prolog",
+   booktitle="Logic Programming with Prolog",
    year="2013",
    publisher="Springer London",
    address="London",
@@ -276,10 +276,10 @@
    abstract="This chapter introduces the two types of Prolog clause, namely facts and rules and their components. It also introduces the concept of a predicate and describes different features of variables.",
    isbn="978-1-4471-5487-7",
    doi="10.1007/978-1-4471-5487-7_2",
-   url="https://doi.org/10.1007/978-1-4471-5487-7_2"
+   url="https://doi.org/10.1007/978-1-4471-5487-7_2",
 }
 
-@Inbook{Chowdhary2020,
+@incollection{Chowdhary2020,
    author="Chowdhary, K. R.",
    title="Logic Programming and Prolog",
    booktitle="Fundamentals of Artificial Intelligence",
@@ -298,7 +298,7 @@
 @inproceedings{Eelco2001,
    author="Visser, Eelco",
    editor="Middeldorp, Aart",
-   title="Stratego: A Language for Program Transformation Based on Rewriting Strategies System Description of Stratego 0.5",
+   title="Stratego: A Language for Program Transformation Based on Rewriting Strategies System Description of {Stratego} 0.5",
    booktitle="Rewriting Techniques and Applications",
    year="2001",
    publisher="Springer Berlin Heidelberg",
