--- a/proposal/References/Bibliography.bib
+++ b/proposal/References/Bibliography.bib
@@ -222,7 +222,7 @@
    month = {1},
    pages = {320-333},
    publisher = {ACM},
-   title = {Verifying Term Graph Optimizations using Isabelle/HOL},
+   title = {Verifying Term Graph Optimizations using {Isabelle/HOL}},
    url = {https://dl.acm.org/doi/10.1145/3573105.3575673},
    year = {2023},
 }
